...

    <!-- Main Screen -->
    <string name="app_name" translatable="false">USB HID Client</string>
    <string name="direct_input">Direct Input</string> <!-- Reused as preference category header -->
    <string name="manual_input">Manual Input</string> <!-- Reused as preference category header -->
    <string name="touchpad_label">Touchpad</string> <!-- Reused as preference category header -->
    <string name="send">Send</string>
    <string name="execute_manual_input">Execute</string>
    <string name="save">Save</string>

    <string name="select">Select</string>
    <string name="edit">Edit</string>
    <string name="execute_script">Execute</string>
...
    <string name="onboarding_header">Before you start using the app…</string>
    <string name="onboarding_notice">Any mention of \"Direct Input\" refers to the keyboard icon in the menu bar that
        can be selected to pull up your keyboard and relay your keystrokes in real-time.\n\nAny mention \"Manual Input\"
        refers to the textbox that you can put text into and have it send all at once when you click the button beside
        it.
    </string>
    <string name="onboarding_continue_btn">Continue</string>

    <!-- Troubleshooting Screen -->
    <string name="troubleshooting_title">Troubleshooting</string>
    <string name="export_debug_logs_btn_title">Export debug logs</string>
    <string name="export_debug_logs_btn_summary">This should only be needed if a developer requests for you to provide
        logs.
...
