...
            onDismissRequest = { isShowingConfirmationAlert = false },
            confirmButton = {
                TextButton(onClick = {
                    runOnClick()
                    isShowingConfirmationAlert = false
                }) {
                    Text("Yes")
                }
            },
            dismissButton = {
                TextButton(onClick = { isShowingConfirmationAlert = false }) {
                    Text("Cancel")
                }
...
